@@ -17,6 +17,22 @@ package net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent;
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
+
+import net.sourceforge.squirrel_sql.fw.datasetviewer.CellDataPopup;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.EmptyWhereClausePart;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IWhereClausePart;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IsNullWhereClausePart;
+import net.sourceforge.squirrel_sql.fw.sql.ISQLDatabaseMetaData;
+import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
+import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
+import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
+
+import javax.swing.JTable;
+import javax.swing.JTextArea;
+import javax.swing.JTextField;
+import javax.swing.SwingUtilities;
+import javax.swing.text.JTextComponent;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
@@ -28,22 +44,6 @@ import java.io.OutputStreamWriter;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.text.NumberFormat;
-
-import javax.swing.JTable;
-import javax.swing.JTextArea;
-import javax.swing.JTextField;
-import javax.swing.SwingUtilities;
-import javax.swing.text.JTextComponent;
-
-import net.sourceforge.squirrel_sql.fw.datasetviewer.CellDataPopup;
-import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
-import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.EmptyWhereClausePart;
-import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IWhereClausePart;
-import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.whereClause.IsNullWhereClausePart;
-import net.sourceforge.squirrel_sql.fw.sql.ISQLDatabaseMetaData;
-import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
-import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
-import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 
 /**
  * @author gwg
@@ -233,11 +233,11 @@ public class DataTypeFloat extends FloatingPointBase
 
          if(FloatingPointBaseDTProperties.isUseJavaDefaultFormat())
          {
-            obj = new Float(value);
+            obj = Float.valueOf(value);
          }
          else
          {
-            obj = new Float("" + _numberFormat.parse(value));
+            obj = Float.valueOf("" + _numberFormat.parse(value));
          }
          return obj;
       }
@@ -412,12 +412,18 @@ public class DataTypeFloat extends FloatingPointBase
      */
    @Override
    public Object readResultSet(ResultSet rs, int index, boolean limitDataRead)
-      throws java.sql.SQLException {
+         throws java.sql.SQLException
+   {
 
       float data = rs.getFloat(index);
       if (rs.wasNull())
+      {
          return null;
-      else return new Float(data);
+      }
+      else
+      {
+         return Float.valueOf(data);
+      }
    }
 
    /**
@@ -465,8 +471,10 @@ public class DataTypeFloat extends FloatingPointBase
     * to be inserted into the DB.
     */
    @Override
-   public Object getDefaultValue(String dbDefaultValue) {
-      if (dbDefaultValue != null) {
+   public Object getDefaultValue(String dbDefaultValue)
+   {
+      if (dbDefaultValue != null)
+      {
          // try to use the DB default value
          StringBuffer mbuf = new StringBuffer();
          Object newObject = validateAndConvert(dbDefaultValue, null, mbuf);
@@ -475,15 +483,19 @@ public class DataTypeFloat extends FloatingPointBase
          // and continue as if there was no default given in the DB.
          // Otherwise, use the converted object
          if (mbuf.length() == 0)
+         {
             return newObject;
+         }
       }
 
       // no default in DB.  If nullable, use null.
       if (_isNullable)
+      {
          return null;
+      }
 
       // field is not nullable, so create a reasonable default value
-      return new Float(0);
+      return Float.valueOf(0);
    }
 
 
