@@ -17,17 +17,17 @@ package net.sourceforge.squirrel_sql.plugins.laf;
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
-import java.util.Iterator;
-
-import javax.swing.LookAndFeel;
-import javax.swing.plaf.metal.MetalLookAndFeel;
-import javax.swing.plaf.metal.MetalTheme;
 
 import net.sourceforge.squirrel_sql.fw.util.BaseException;
 import net.sourceforge.squirrel_sql.fw.util.DuplicateObjectException;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 import net.sourceforge.squirrel_sql.fw.xml.XMLObjectCache;
+
+import javax.swing.LookAndFeel;
+import javax.swing.plaf.metal.MetalLookAndFeel;
+import javax.swing.plaf.metal.MetalTheme;
+import java.util.Iterator;
 /**
  * Behaviour for the jGoodies Plastic Look and Feel.
  *
@@ -80,7 +80,7 @@ class PlasticLookAndFeelController extends AbstractPlasticController
 
             ClassLoader cl = getLAFRegister().getLookAndFeelClassLoader();
             Class<?> clazz = Class.forName(AbstractPlasticController.DEFAULT_PLASTIC_THEME_CLASS_NAME, false, cl);
-            MetalTheme theme = (MetalTheme) clazz.newInstance();
+            MetalTheme theme = (MetalTheme) clazz.getDeclaredConstructor().newInstance();
             _prefs.setThemeName(theme.getName());
 
             try
